# AI-Based-Analysis-and-Classification-of-Abiotic-Seafloor-Components

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: readme.md
models/: RF_patch_level_weighted.joblib  RF_patch_level_weighted_feature_columns.json
scripts/: create_dataset.py  inspect_npz.py  predict_geotiff.py  train_rf.py
src/: __init__.py  modeling.py
src/seabed_rf/: features.py  raster_utils.py
