[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seabed-rf-pipeline"
version = "1.0.0"
description = "RandomForest pipeline for seabed mean grain size prediction from side-scan sonar and bathymetry GeoTIFF data"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "scikit-image>=0.21",
  "rasterio>=1.3",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
